Add Fuction Uploadfile Dell Object Storage
